# eliott-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  EngineMaster.md
include/renderer/: Camera.hpp  Renderer.hpp  SpriteBatch.hpp  Texture.hpp  TextureManager.hpp
src/: Renderer.cpp  SpriteBatch.cpp  Texture.cpp
